Fixed gap

--- a/public/assets/styles/style.css
+++ b/public/assets/styles/style.css
@@ -794,7 +794,7 @@ a {
 .admin-menu {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    row-gap: 10px;
+    gap: 10px;
     padding: 10px;
 }
 
